--- a/photologue/templates/photologue/photo_detail.html
+++ b/photologue/templates/photologue/photo_detail.html
@@ -6,7 +6,7 @@
 {% load static %}
 
 
-{% block title %} <title>Skyfolk / {{ object.title }} por: {{ object.owner }}</title> {% endblock %}
+{% block title %}{{ object.title }} por: {{ object.owner }}{% endblock %}
 
 {% block include_files %}
 
