--- a/postman/templates/postman/inbox.html
+++ b/postman/templates/postman/inbox.html
@@ -1,6 +1,6 @@
 {% extends "postman/base_folder.html" %}
 {% load i18n %}
-{% block title %}<title>Skyfolk / {% trans "Received Messages" %}</title>{% endblock %}
+{% block title %} {% trans "Received Messages" %}{% endblock %}
 {% block pm_undelete_button %}{% endblock %}
 {% block pm_recipient_header %}{% endblock %}
 {% block pm_date %}{% trans "Received" %}{% endblock %}
