--- a/postman/templates/postman/reply.html
+++ b/postman/templates/postman/reply.html
@@ -1,4 +1,4 @@
 {% extends "postman/base_write.html" %}
 {% load i18n %}
-{% block title %}<title>Skyfolk / {% trans "Reply"%}</title>{% endblock %}
+{% block title %}{% trans "Reply"%}{% endblock %}
 {% block pm_write_recipient %}<div class="chip"><b>{% trans "Recipient" %}:</b> {{ recipient }}</div>{% endblock %}
