--- a/postman/templates/postman/trash.html
+++ b/postman/templates/postman/trash.html
@@ -1,6 +1,6 @@
 {% extends "postman/base_folder.html" %}
 {% load i18n %}
-{% block title %}<title>Skyfolk / {% trans "Deleted Messages" %}</title>{% endblock %}
+{% block title %}{% trans "Deleted Messages" %}{% endblock %}
 {% block pm_delete_button %}{% endblock %}
 {% block pm_archive_button %}{% endblock %}
 {% block pm_subject %}{# no link #}
