--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -9,7 +9,7 @@
     <script src="{% static "js/config.js" %}"></script>
 {% endblock %}
 
-{% block title %} <title>Skyfolk / Configuración {{ request.user.username }}.</title> {% endblock %}
+{% block title %}Configuración {{ request.user.username }}{% endblock %}
 
 {% block content %}
     <div class="container">
