--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -43,7 +43,7 @@ Base para la interfaz en comun de todos los usuarios.
     <script src="{% static "js/masonry.pkgd.min.js" %}" type="text/javascript"></script>
     <script src="{% static "js/imagesloaded.pkgd.min.js" %}" type="text/javascript"></script>
 
-    {% block title %} <title>Skyfolk - Bienvenido.</title> {% endblock %}
+    <title>Skyfolk // {% block title %}Bienvenido{% endblock %}</title>
     {% block extra-js %}{% endblock %}
     <!-- bloques de estilos para cada pagina -->
     {% block extra-css %}{% endblock %}
