--- a/skyfolk/templates/account/base_search.html
+++ b/skyfolk/templates/account/base_search.html
@@ -4,7 +4,7 @@
 {% endcomment %}
 {% load app_filters %}
 {% load static %}
-{% block title %} <title>Buscar contactos</title> {% endblock %}
+{% block title %}Buscar contactos{% endblock %}
 {% block extra-css %}
     <link type="text/css" rel="stylesheet" href="{% static "css/amigos.css" %}">
     <link type="text/css" rel="stylesheet" href="{% static "css/search_advanced.css" %}">
