--- a/skyfolk/templates/account/email_confirm.html
+++ b/skyfolk/templates/account/email_confirm.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% load account %}
 {% load static %}
-{% block title %} <title>Configuración - {% trans "Confirm E-mail Address" %}</title> {% endblock %}
+{% block title %}Configuración - {% trans "Confirm E-mail Address" %}{% endblock %}
 
 {% block extra-css %}
     <style>
