--- a/skyfolk/templates/account/publication_detail.html
+++ b/skyfolk/templates/account/publication_detail.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" type="text/css" href="{% static "css/publication_detail.css" %}">
 
 {% endblock %}
-{% block title %} <title> Skyfolk - Publicacion #{{ publication_id }}</title> {% endblock %}
+{% block title %}Publicacion #{{ publication_id }}{% endblock %}
 {% block content %}
     <style>
         .card-content img {
