--- a/skyfolk/templates/account/search-avanzed.html
+++ b/skyfolk/templates/account/search-avanzed.html
@@ -5,7 +5,7 @@
 {% load app_filters %}
 {% load avatar_tags %}
 {% load static %}
-{% block title %} <title>Búsqueda en Skyfolk.</title> {% endblock %}
+{% block title %}Búsqueda{% endblock %}
 
 
 {% block content %}
