--- a/skyfolk/templates/account/verification_sent.html
+++ b/skyfolk/templates/account/verification_sent.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 
-{% block title %} <title>Configuración - Confirmar Email.</title> {% endblock %}
+{% block title %}Configuración - Confirmar Email {% endblock %}
 
 {% block extra-css %}
     <style>
