--- a/skyfolk/templates/groups/board_theme.html
+++ b/skyfolk/templates/groups/board_theme.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="{% static "css/comentarios.css" %}">
     <link rel="stylesheet" type="text/css" href="{% static "css/publication_detail.css" %}">
 {% endblock %}
-{% block title %} <title> Skyfolk / Tema {{ object.board_group }}-{{ object.title }} </title> {% endblock %}
+{% block title %}Tema {{ object.board_group }}-{{ object.title }}{% endblock %}
 {% block content %}
     <div class="container">
         <div class="row">
