--- a/skyfolk/templates/groups/configuration/group_delete.html
+++ b/skyfolk/templates/groups/configuration/group_delete.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load static %}
 {% load avatar_tags %}
-{% block title %} <title>Skyfolk / Configuración {{ object.name }}.</title> {% endblock %}
+{% block title %}Configuración {{ object.name }}{% endblock %}
 {% block cf-title %}
     <div class="hgroup">
         <h4 class="cn"> Grupo </h4>
