--- a/skyfolk/templates/groups/list_group.html
+++ b/skyfolk/templates/groups/list_group.html
@@ -2,7 +2,7 @@
 {% load app_filters %}
 {% load avatar_tags %}
 {% load static %}
-{% block title %} <title>Skyfolk - Grupos</title> {% endblock %}
+{% block title %}Grupos{% endblock %}
 
 {% block extra-css %}
 <link rel="stylesheet" type="text/css" href="{% static "css/groups.css" %}" onload="if(media!='all')media='all'">
