--- a/skyfolk/templates/groups/user_likes.html
+++ b/skyfolk/templates/groups/user_likes.html
@@ -3,7 +3,7 @@
 Template para los seguidores de un perfil
 {% endcomment %}
 {% load static %}
-{% block title %} <title>Usuarios de {{ group.name }}</title> {% endblock %}
+{% block title %}Usuarios de {{ group.name }}{% endblock %}
 {% block extra-css %}
     <link type="text/css" rel="stylesheet" href="{% static "css/amigos.css" %}" onload="if(media!='all')media='all'">
 {% endblock %}
