--- a/skyfolk/templates/search/search.html
+++ b/skyfolk/templates/search/search.html
@@ -8,7 +8,7 @@ Template para las busquedas
 {% load highlight %}
 {% load embed_video_tags %}
 {% load static %}
-{% block title %} <title>Skyfolk / Busqueda {{ q }}</title> {% endblock %}
+{% block title %}Búsqueda {{ q }}{% endblock %}
 {% block include_files %}
     <!-- Estilos para la galeria de fotos -->
     <style>
