--- a/skyfolk/templates/services/delete_service.html
+++ b/skyfolk/templates/services/delete_service.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load i18n %}
 {% load django_th_extras %}
-{% block title %}<title>Skyfolk // {% trans "My Services" %}</title>{% endblock %}
+{% block title %}{% trans "My Services" %}{% endblock %}
 {% block content %}
 <div class="container">
     <div class="row">
