--- a/skyfolk/templates/services/error_service.html
+++ b/skyfolk/templates/services/error_service.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% load django_th_extras %}
 {% block filter_trigger %}
-{% block title %}<title>Skyfolk // Error en servicio{% comment %}{% trans "My Services" %}{% endcomment %}</title>{% endblock %}
+{% block title %}Error en servicio{% comment %}{% trans "My Services" %}{% endcomment %}{% endblock %}
 {% endblock %}
 {% block content %}
     <div class="container">
