--- a/skyfolk/templates/services/services.html
+++ b/skyfolk/templates/services/services.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% load django_th_extras %}
 {% block filter_trigger %}
-{% block title %}<title>Skyfolk // Mis servicios{% comment %}{% trans "My Services" %}{% endcomment %}</title>{% endblock %}
+{% block title %}Mis servicios{% comment %}{% trans "My Services" %}{% endcomment %}{% endblock %}
 {% block extra-css %}
     <style>
         .card-image img {
