--- a/user_profile/templates/user_profile/user_content.html
+++ b/user_profile/templates/user_profile/user_content.html
@@ -1,6 +1,6 @@
 {% extends "account/base_interface.html" %}
 {% load app_filters avatar_tags static humanize %}
-{% block title %} <title>Skyfolk / Mi ensalada de frutas.</title> {% endblock %}
+{% block title %}Mi ensalada de frutas{% endblock %}
 
 {% block extra-css %}
         <link type="text/css" rel="stylesheet" href="{% static "css/amigos.css" %}">
