--- a/avatar/templates/avatar/confirm_delete.html
+++ b/avatar/templates/avatar/confirm_delete.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load static %}
 
-{% block title %} <title>Configuración - {{ request.user.username }} - Imágenes de perfil.</title> {% endblock %}
+{% block title %}Configuración - {{ request.user.username }} - Imágenes de perfil{% endblock %}
 
 {% block extra-css %}
     <link rel="stylesheet" type="text/css" href="{% static "css/avatar.css" %}"/>
