--- a/photologue/templates/photologue/photo_gallery.html
+++ b/photologue/templates/photologue/photo_gallery.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% load humanize %}
 {% load static %}
-{% block title %} <title>Skyfolk / Media </title> {% endblock %}
+{% block title %}Media{% endblock %}
 
 {% block include_files %}
     <link rel="stylesheet" href="{% static "css/gallery.css" %}">
