--- a/photologue_groups/templates/photologue_groups/photo_detail.html
+++ b/photologue_groups/templates/photologue_groups/photo_detail.html
@@ -4,7 +4,7 @@
 {% load i18n %}
 {% load humanize %}
 {% load static %}
-{% block title %} <title>Skyfolk / {{ object.title }} por: {{ object.owner }}</title> {% endblock %}
+{% block title %}{{ object.title }} por: {{ object.owner }}{% endblock %}
 
 {% block include_files %}
 
