--- a/photologue_groups/templates/photologue_groups/photo_gallery.html
+++ b/photologue_groups/templates/photologue_groups/photo_gallery.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% load humanize %}
 {% load static %}
-{% block title %} <title>Skyfolk / Media de {{ group_gallery.name }} </title> {% endblock %}
+{% block title %}Media de {{ group_gallery.name }}{% endblock %}
 
 {% block include_files %}
     <link rel="stylesheet" href="{% static "css/gallery.css" %}">
