--- a/photologue_groups/templates/photologue_groups/publication_detail.html
+++ b/photologue_groups/templates/photologue_groups/publication_detail.html
@@ -15,7 +15,7 @@
 
 {% endblock %}
 
-{% block title %} <title> Skyfolk - Publicacion #{{ publication_id }}</title> {% endblock %}
+{% block title %}Publicacion #{{ publication_id }}{% endblock %}
 {% block content %}
     <div class="container" id="publication-thread">
         <div class="row">
