--- a/photologue_groups/templates/photologue_groups/videos/publication_detail.html
+++ b/photologue_groups/templates/photologue_groups/videos/publication_detail.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="{% static "css/publication_detail.css" %}">
 {% endblock %}
 
-{% block title %} <title> Skyfolk - Publicacion #{{ publication_id }}</title> {% endblock %}
+{% block title %}Publicacion #{{ publication_id }}{% endblock %}
 {% block content %}
     <div class="container" id="publication-thread">
         {% comment %}
