--- a/photologue_groups/templates/photologue_groups/videos/video_detail.html
+++ b/photologue_groups/templates/photologue_groups/videos/video_detail.html
@@ -4,7 +4,7 @@
 {% load i18n %}
 {% load humanize %}
 {% load static %}
-{% block title %} <title>Skyfolk / {{ object.name }} por: {{ object.owner }}</title> {% endblock %}
+{% block title %}{{ object.name }} por: {{ object.owner }}{% endblock %}
 
 {% block include_files %}
     <link rel="stylesheet" href="{% static "css/gallery.css" %}">
