--- a/postman/templates/postman/archives.html
+++ b/postman/templates/postman/archives.html
@@ -1,6 +1,6 @@
 {% extends "postman/base_folder.html" %}
 {% load i18n %}
-{% block title %}<title>Skyfolk / {% trans "Archived Messages" %}</title>{% endblock %}
+{% block title %}{% trans "Archived Messages" %}{% endblock %}
 {% block pm_archive_button %}{% endblock %}
 {% block pm_undelete_button %}{% endblock %}
 {% block pm_footer_info %}<br>
