--- a/postman/templates/postman/sent.html
+++ b/postman/templates/postman/sent.html
@@ -1,6 +1,6 @@
 {% extends "postman/base_folder.html" %}
 {% load i18n %}
-{% block title %}<title>Skyfolk / {% trans "Sent Messages" %}</title>{% endblock %}
+{% block title %}{% trans "Sent Messages" %}{% endblock %}
 {% block pm_undelete_button %}{% endblock %}
 {% block pm_read_button %}{% endblock %}
 {% block pm_unread_button %}{% endblock %}
