--- a/postman/templates/postman/view.html
+++ b/postman/templates/postman/view.html
@@ -1,7 +1,7 @@
 {% extends "postman/base.html" %}
 {% load i18n %}{% load postman_tags %}{% load avatar_tags static %}
-{% block title %}<title>Skyfolk / {% if pm_messages|length > 1 %}{% trans "Conversation" %}{% else %}
-    {% trans "Message" %}{% endif %}</title>{% endblock %}
+{% block title %}{% if pm_messages|length > 1 %}{% trans "Conversation" %}{% else %}
+    {% trans "Message" %}{% endif %}{% endblock %}
 {% block extra-css %}
     <link rel="stylesheet" type="text/css" href="{% static "css/mensajes_privados.css" %}"/>
 {% endblock %}
