--- a/skyfolk/templates/about/base_about.html
+++ b/skyfolk/templates/about/base_about.html
@@ -14,7 +14,7 @@
             text-align: center;
         }
     </style>
-    {% block title %} <title>Blog de Skyfolk</title> {% endblock %}
+    {% block title %}Blog de Skyfolk{% endblock %}
 </head>
 <body>
 <nav class="blue darken-1" role="navigation">
