--- a/skyfolk/templates/account/base_news.html
+++ b/skyfolk/templates/account/base_news.html
@@ -5,7 +5,7 @@
 {% load app_filters %}
 {% load static %}
 {% load render_bundle from webpack_loader %}
-{% block title %} <title>Skyfolk / Novedades</title> {% endblock %}
+{% block title %}Novedades{% endblock %}
 
 {% block extra-css %}
     <link rel="stylesheet" type="text/css" href="{% static "css/news.css" %}"/>
