--- a/skyfolk/templates/account/email.html
+++ b/skyfolk/templates/account/email.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% load static %}
 
-{% block title %} <title>Configuración - Email.</title> {% endblock %}
+{% block title %}Email{% endblock %}
 
 {% block extra-css %}
     <link rel="stylesheet" href="{% static "css/cf-email.css" %}" type="text/css" media="all">
