--- a/skyfolk/templates/account/email_confirmed.html
+++ b/skyfolk/templates/account/email_confirmed.html
@@ -4,7 +4,7 @@
 {% load account %}
 
 {% block head_title %}{% trans "Confirm E-mail Address" %}{% endblock %}
-{% block title %} <title>Configuración - {% trans "Confirm E-mail Address" %}.</title> {% endblock %}
+{% block title %}Configuración - {% trans "Confirm E-mail Address" %}{% endblock %}
 {% block extra-css %}
     <style>
         .information-text {
