--- a/skyfolk/templates/account/privacity/need_confirmation_profile.html
+++ b/skyfolk/templates/account/privacity/need_confirmation_profile.html
@@ -5,7 +5,7 @@
 {% load app_filters %}
 {% load avatar_tags %}
 {% load static %}
-{% block title %} <title> Perfil de {{ user_profile.username }}</title> {% endblock %}
+{% block title %}Perfil de {{ user_profile.username }}{% endblock %}
 {% block include_files %}
     <style type="text/css">
         .title-wrapper {
