--- a/skyfolk/templates/groups/group_profile_no_member.html
+++ b/skyfolk/templates/groups/group_profile_no_member.html
@@ -26,7 +26,7 @@
         }
     </style>
 {% endblock %}
-{% block title %} <title> Grupo {{ group_profile.name }}</title> {% endblock %}
+{% block title %}Grupo {{ group_profile.name }}{% endblock %}
 {% block content %}
     <div class="container">
     <div class="row">
