--- a/skyfolk/templates/services/service_form.html
+++ b/skyfolk/templates/services/service_form.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load i18n %}
 {% load django_th_extras %}
-{% block title %}<title>Skyfolk // Mis servicios{% comment %}{% trans "My Services" %}{% endcomment %}</title>{% endblock %}
+{% block title %}Mis servicios{% comment %}{% trans "My Services" %}{% endcomment %}{% endblock %}
 {% block content %}
 <div class="container">
     <div class="row">
