--- a/th_services/th_pushbullet/templates/pushbullet/callback.html
+++ b/th_services/th_pushbullet/templates/pushbullet/callback.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% load i18n %}
-{% block title %}<title>Skyfolk // {% trans "My Trigger" %}</title>{% endblock %}
+{% block title %}{% trans "My Trigger" %}{% endblock %}
 {% block content %}
 <div class="container">
 	<div class="row">
