--- a/skyfolk/templates/account/ajax_load_replies.html
+++ b/skyfolk/templates/account/ajax_load_replies.html
@@ -51,86 +51,12 @@
                                             <a href="#">+ Mostrar más</a>
                                         </div>
                                     </div>
-                                    {% if node.shared_publication %}
-                                        {% if node.shared_publication.deleted %}
-                                            <div class="row">
-                                                <div class="col s12 m5">
-                                                    <div class="card-panel blue">
-                                                        <span class="white-text">Esta publicación no está disponible.</span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        {% else %}
-                                            {% comment %} Para publicaciones que contienen citas {% endcomment %}
-                                            <div class="card grey lighten-5">
-                                                <div class="card-content black-text">
-                                                    {% avatar node.shared_publication.author "40x40" %}
-                                                    <span class="card-title-md-18"><a
-                                                            href="{% url 'user_profile:profile' node.shared_publication.author %}">@{{ node.shared_publication.author }}</a>
-                                                        <i class="blue-text text-darken-2"> {{ node.shared_publication.created|naturaltime }}</i></span>
-                                                    <p>{{ node.shared_publication.content|safe }}</p>
-                                                    {% with node.shared_publication.images.all as images %}
-                                                        {% if images %}<br>
-                                                            <div class="row">
-                                                                {% for image in images %}
-                                                                    {% if image.image %}
-                                                                    <div class="col s4">
-                                                                        <img class="lazyload materialboxed responsive-img z-depth-2"
-                                                                             data-src="{{ image.image.url }}"
-                                                                             alt="Imagen de: {{ node.author }}"
-                                                                             title="Imagen de: {{ node.author }}">
-                                                                    </div>
-                                                                    {% endif %}
-                                                                {% endfor %}
-                                                            </div>
-                                                        {% endif %}
-                                                    {% endwith %}
-                                                    {% with node.shared_publication.videos.all as videos %}
-                                                        {% if videos %}<br>
-                                                            <div class="row">
-                                                                {% for video in videos %}
-                                                                    {% if video.video %}
-                                                                    <div class="col s4">
-                                                                        <video class="responsive-video" controls loop>
-                                                                            <source src="{{ video.video.url }}"
-                                                                                    type="video/mp4">
-                                                                        </video>
-                                                                    </div>
-                                                                    {% endif %}
-                                                                {% endfor %}
-                                                            </div>
-                                                        {% endif %}
-                                                    {% endwith %}
-                                                    {% if node.shared_publication.extra_content %}
-                                                        {% comment %} Para publicaciones con URL {% endcomment %}
-                                                        {% if  node.shared_publication.extra_content.video %}
-                                                            {% video node.shared_publication.extra_content.video as my_video %}
-                                                            {% video my_video "100% x 100%" %}
-                                                            {% endvideo %}
-                                                        {% else %}
-                                                            <div class="card small">
-                                                                <div class="card-image">
-                                                                    <img class="lazyload" data-src="
-                                                                            {% if node.shared_publication.extra_content.image %}{{ node.shared_publication.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
-                                                                    <span class="card-title white-text">{{ node.shared_publication.extra_content.title }}</span>
-                                                                </div>
-                                                                <div class="card-content">
-                                                                    <p>{{ node.shared_publication.extra_content.description }}.</p>
-                                                                </div>
-                                                                <div class="card-action">
-                                                                    <a href="{{ node.shared_publication.extra_content.url }}">Ver</a>
-                                                                </div>
-                                                            </div>
-                                                        {% endif %}
-                                                    {% endif %}
-                                                </div>
-                                                <div class="card-action">
-                                                    <a class="blue-text text-darken-2"
-                                                       href="/publication/{{ node.shared_publication.pk }}">Ver</a>
-                                                </div>
-                                            </div>
-                                        {% endif %}
-                                    {% endif %}
+                                    {% with node.shared_publication as shared_publication %}
+                                        {% include "account/shared_publication.html" %}
+                                    {% endwith %}
+                                    {% with node.shared_group_publication as shared_publication %}
+                                        {% include "account/shared_publication.html" %}
+                                    {% endwith %}
                                     {% with node.images.all as images %}
                                         {% if images %}
                                             <div class="row images">
