+ Mejoras en UI

--- a/postman/templates/postman/base_write.html
+++ b/postman/templates/postman/base_write.html
@@ -52,7 +52,7 @@
                             {{ form.recipients.errors }}
                             <div class="input-field col s12">
                                 {{ form.recipients }}
-                                <label for="id_recipients">{{ form.recipients.label }}</label>
+                                <label for="id_recipients" class="active">{{ form.recipients.label }}</label>
                             </div>
                         </div>
                         <div class="row">
