--- a/skyfolk/templates/account/base_news.html
+++ b/skyfolk/templates/account/base_news.html
@@ -85,157 +85,12 @@
                     </div>
                     <div class="col l9 m10 s9 contenido">
                         <p>{{ item.content|safe }}</p>
-                        {% if item.shared_publication %}
-                        {% if item.shared_publication.deleted %}
-                        <div class="row">
-                            <div class="col s12 m5">
-                                <div class="card-panel blue">
-                                    <span class="white-text">Esta publicación no está disponible.</span>
-                                </div>
-                            </div>
-                        </div>
-                        {% else %}
-                        {% comment %} Para publicaciones que contienen citas {% endcomment %}
-                        <div class="card grey lighten-5">
-                            <div class="card-content black-text">
-                                {% avatar item.shared_publication.author 60 %}<br>
-                                <span class="card-title"><a
-                                    href="{% url 'user_profile:profile' item.shared_publication.author %}">@{{ item.shared_publication.author }}</a>
-                                    <i class="blue-textº text-darken-2"> {{ item.shared_publication.created|naturaltime }}</i></span>
-                                    <p>{{ item.shared_publication.content|safe }}</p>
-                                    {% with item.shared_publication.images.all as images %}
-                                    {% if images %}<br>
-                                    <div class="row">
-                                        {% for image in images %}
-                                            {% if image.image %}
-                                        <div class="col s12">
-                                            <img class="lazyload materialboxed responsive-img z-depth-2" data-src="{{image.image.url}}" alt="Imagen de: {{ item.author }}" title="Imagen de: {{ item.author }}">
-                                        </div>
-                                            {% endif %}
-                                        {% endfor %}
-                                    </div>
-                                    {% endif %}
-                                    {% endwith %}
-                                    {% with item.shared_publication.videos.all as videos %}
-                                    {% if videos %}<br>
-                                    <div class="row">
-                                        {% for video in videos %}
-                                            {% if video.video %}
-                                        <div class="col s12">
-                                            <video class="responsive-video" controls loop>
-                                                <source src="{{ video.video.url }}" type="video/mp4">
-                                                </video>
-                                            </div>
-                                              {% endif %}
-                                            {% endfor %}
-
-                                        </div>
-                                        {% endif %}
+                                        {% with item.shared_publication as shared_publication %}
+                                            {% include "account/shared_publication.html" %}
                                         {% endwith %}
-                                        {% if item.shared_publication.extra_content %}
-                                        {% comment %} Para publicaciones con URL {% endcomment %}
-                                        {% if  item.shared_publication.extra_content.video %}
-                                        {% video item.shared_publication.extra_content.video as my_video %}
-                                        {% video my_video "100% x 100%" %}
-                                        {% endvideo %}
-                                        {% else %}
-                                        <div class="card small">
-                                            <div class="card-image">
-                                                <img class="lazyload" data-src="{% if item.shared_publication.extra_content.image %}{{ item.shared_publication.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
-                                                <span class="card-title white-text">{{ item.shared_publication.extra_content.title }}</span>
-                                            </div>
-                                            <div class="card-content">
-                                                <p>{{ item.shared_publication.extra_content.description }}.</p>
-                                            </div>
-                                            <div class="card-action">
-                                                <a href="{{ item.shared_publication.extra_content.url }}">Ver</a>
-                                            </div>
-                                        </div>
-                                        {% endif %}
-                                        {% endif %}
-                                    </div>
-                                    <div class="card-action">
-                                        <a class="blue-text text-darken-2"
-                                        href="/publication/{{ item.shared_publication.pk }}">Ver</a>
-                                    </div>
-                                </div>
-                                {% endif %}
-                                {% endif %}
-                                {% if item.shared_group_publication %}
-                                {% if item.shared_group_publication.deleted %}
-                                <div class="row">
-                                    <div class="col s12 m5">
-                                        <div class="card-panel blue">
-                                            <span class="white-text">Esta publicación no está disponible.</span>
-                                        </div>
-                                    </div>
-                                </div>
-                                {% else %}
-                                {% comment %} Para publicaciones que contienen citas {% endcomment %}
-                                <div class="card grey lighten-5">
-                                    <div class="card-content black-text">
-                                        {% avatar item.shared_group_publication.author 60 %}<br>
-                                        <span class="card-title"><a
-                                            href="{% url 'user_profile:profile' item.shared_group_publication.author %}">@{{ item.shared_group_publication.author }}</a>
-                                            <i class="blue-text text-darken-2"> {{ item.shared_group_publication.created|naturaltime }}</i></span>
-                                            <p>{{ item.shared_group_publication.content|safe }}</p>
-                                            {% with item.shared_group_publication.images.all as images %}
-                                            {% if images %}<br>
-                                            <div class="row">
-                                                {% for image in images %}
-                                                    {% if image.image %}
-                                                <div class="col s4">
-                                                    <img class="lazyload materialboxed responsive-img z-depth-2" data-src="{{image.image.url}}" alt="Imagen de: {{ item.author }}" title="Imagen de: {{ item.author }}">
-                                                </div>
-                                                    {% endif %}
-                                                {% endfor %}
-                                            </div>
-                                            {% endif %}
-                                            {% endwith %}
-                                            {% with item.shared_group_publication.videos.all as videos %}
-                                            {% if videos %}<br>
-                                            <div class="row">
-                                                {% for video in videos %}
-                                                    {% if video.video %}
-                                                <div class="col s4">
-                                                    <video class="responsive-video" controls loop>
-                                                        <source src="{{ video.video.url }}" type="video/mp4">
-                                                        </video>
-                                                    </div>
-                                                     {% endif %}
-                                                    {% endfor %}
-                                                </div>
-                                                {% endif %}
-                                                {% endwith %}
-                                                {% if item.shared_group_publication.extra_content %}
-                                                {% comment %} Para publicaciones con URL {% endcomment %}
-                                                {% if item.shared_group_publication.extra_content.video %}
-                                                {% video item.shared_group_publication.extra_content.video as my_video %}
-                                                {% video my_video "100% x 100%" %}
-                                                {% endvideo %}
-                                                {% else %}
-                                                <div class="card small">
-                                                    <div class="card-image">
-                                                        <img class="lazyload" data-src="{% if item.shared_group_publication.extra_content.image %}{{ item.shared_group_publication.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
-                                                        <span class="card-title white-text">{{ item.shared_group_publication.extra_content.title }}</span>
-                                                    </div>
-                                                    <div class="card-content">
-                                                        <p>{{ item.shared_group_publication.extra_content.description }}.</p>
-                                                    </div>
-                                                    <div class="card-action">
-                                                        <a href="{{ item.shared_group_publication.extra_content.url }}">Ver</a>
-                                                    </div>
-                                                </div>
-                                                {% endif %}
-                                                {% endif %}
-                                            </div>
-                                            <div class="card-action">
-                                                <a class="blue-text text-darken-2"
-                                                href="{% url "publications_groups:detail_group_publication" pk=item.shared_group_publication.pk %}">Ver</a>
-                                            </div>
-                                        </div>
-                                        {% endif %}
-                                        {% endif %}
+                                        {% with item.shared_group_publication as shared_publication %}
+                                            {% include "account/shared_publication.html" %}
+                                        {% endwith %}
                                         {% with item.images.all as images %}
                                         {% if images %}
                                         <br>
