--- a/skyfolk/templates/emails/member_request.html
+++ b/skyfolk/templates/emails/member_request.html
@@ -1,3 +1,6 @@
+{% extends "emails/base_email.html" %}
+{% block content %}
 <p>
     ¡Hola <b>{{ to_user }}</b>! - Te avisamos de que {{ from_user }} quiere unirse al grupo {{ to_group }}.
 </p>
+{% endblock %}
