--- a/skyfolk/templates/emails/new_follow.html
+++ b/skyfolk/templates/emails/new_follow.html
@@ -1,3 +1,6 @@
+{% extends "emails/base_email.html" %}
+{% block content %}
 <p>
     ¡Hola <b>{{ to_user }}</b>! - Te avisamos de que {{ from_user }} ahora es tu seguidor.
 </p>
+{% endblock %}
