--- a/skyfolk/templates/emails/new_member_added.html
+++ b/skyfolk/templates/emails/new_member_added.html
@@ -1,3 +1,6 @@
+{% extends "emails/base_email.html" %}
+{% block content %}
 <p>
     ¡Hola <b>{{ to_user }}</b>! - Te avisamos de que ya eres miembro de {{ from_user }} .
 </p>
+{% endblock %}
