--- a/dash/templates/dash/plugin_widgets_ajax.html
+++ b/dash/templates/dash/plugin_widgets_ajax.html
@@ -1,4 +1,4 @@
-{% load i18n %}
+{% load i18n dash_tags %}
 
 <div class="container">
     <div class="row">
@@ -27,7 +27,7 @@
                                 <ul class="collection">
                                     {% for uid, name, url in widgets %}
                                     <li>
-                                        <a class="collection-item" href="{{ url }}" class="widget widget-{{ uid }}">{{ name }}</a>
+                                        <a class="collection-item" href="{{ url }}" class="widget widget-{{ uid }}">{{ name|simplify_plugin_name }}</a>
                                     </li>
                                     {% endfor %}
                                 </ul>
