--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -184,25 +184,25 @@ Base para la interfaz en comun de todos los usuarios.
             <tbody>
                 <tr>
                     <td class="shortcut">
-                        <b class="sc-key">m</b>
+                        <b class="sc-key">M</b>
                     </td>
                     <td class="shortcut-label">Nuevo comentario</td>
                 </tr>
                 <tr>
                     <td class="shortcut">
-                        <b class="sc-key">f</b>
+                        <b class="sc-key">F</b>
                     </td>
-                    <td class="shortcut-label">Favorito</td>
+                    <td class="shortcut-label">Me gusta</td>
                 </tr>
                 <tr>
                     <td class="shortcut">
-                        <b class="sc-key">a</b>
+                        <b class="sc-key">A</b>
                     </td>
                     <td class="shortcut-label">Abrir atajos</td>
                 </tr>
                 <tr>
                     <td class="shortcut">
-                        <b class="sc-key">b</b>
+                        <b class="sc-key">B</b>
                     </td>
                     <td class="shortcut-label">Bloquear usuario</td>
                 </tr>
